--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -102,7 +102,7 @@
                                   </td>
                                   <td scope="row">
                                     <div class="social-description">
-                                      <a href="#button" class="btn btn-primary btn-lg btn-sm"><i
+                                      <a class="btn btn-primary btn-lg btn-sm" (click)="removeBroadcast(x._id)"><i
                                           class="now-ui-icons ui-1_simple-remove"></i></a>
                                     </div>
                                   </td>
