--- a/frontend/src/app/components/sellingitem/sellingitem.component.html
+++ b/frontend/src/app/components/sellingitem/sellingitem.component.html
@@ -31,7 +31,7 @@
                       <div class="row">
 
                         <div class="ml-auto">
-                          <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View
+                          <a class="btn btn-sm btn-primary btn-lg " routerLink="/userprofile/broadcast">View
                             More</a>
                         </div>
                       </div>
@@ -42,30 +42,40 @@
                         <thead>
                           <tr>
                             <th scope="col">ID</th>
-                            <th scope="col" sortable="name" (sort)="onSort($event)">Username</th>
+                            <th scope="col">Username</th>
                             <th scope="col">Finalize</th>
                             <th scope="col">Remove</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr *ngFor="let x of recievedBroadcasts">
-                            <td>{{x.userID}}</td>
-                            <a routerLink="/userprofile/search/{{x.username}}">
-                              <td>{{x.username}}</td>
-                            </a>
-                            <td>
-                              <div class="social-description">
-                                <a class="btn btn-primary btn-sm"
-                                  routerLink="/userprofile/finalizingform/{{itemId}}/{{x.userID}}">F</a>
-                              </div>
-                            </td>
-                            <td>
-                              <div class="social-description">
-                                <a href="#button" class="btn btn-primary btn-sm"><i
-                                    class="now-ui-icons ui-1_simple-remove"></i></a>
-                              </div>
-                            </td>
+                            <ng-template [ngIf]="recievedBroadcasts != 'empty'">
+                              <td>{{x.userID}}</td>
+                              <a routerLink="/userprofile/search/{{x.username}}">
+                                <td>{{x.username}}</td>
+                              </a>
+                              <td>
+                                <div class="social-description">
+                                  <a class="btn btn-primary btn-sm"
+                                    routerLink="/userprofile/finalizingform/{{itemId}}/{{x.userID}}">F</a>
+                                </div>
+                              </td>
+                              <td>
+                                <div class="social-description">
+                                  <a href="#button" class="btn btn-primary btn-sm"><i
+                                      class="now-ui-icons ui-1_simple-remove"></i></a>
+                                </div>
+                              </td>
+                            </ng-template>
+
                           </tr>
+                          <ng-template [ngIf]="recievedBroadcasts == 'empty'">
+                            <tr>
+                              <td colspan="4">
+                                <b>No Broadcasts Available</b>
+                              </td>
+                            </tr>
+                          </ng-template>
                         </tbody>
                       </table>
                     </form>
