--- a/frontend/src/app/pages/userprofile/adminprofile/adminprofile.component.html
+++ b/frontend/src/app/pages/userprofile/adminprofile/adminprofile.component.html
@@ -86,6 +86,9 @@
       </div>
     </div>
   </div>
+  <div *ngFor="let val of complains">
+    <div>{{val.Complain}}</div>
+  </div>
   <!-- <div class="section">
     <div class="col">
       <div class="col-md-8 ml-auto mr-auto">
