--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -41,6 +41,7 @@
             <h3>Ratings</h3>
             <div class="col-md-12">
               <div class="row">
+
               </div>
               <a class="btn btn-primary btn-lg btn-round" (click)="getAllBroad()">test</a>
             </div>
@@ -337,7 +338,7 @@
                             <td scope="row">BC</td>
                             <td scope="row">BC</td>
                             <td scope="row">BC</td>
-                            <td scope="row">BC</td>
+                            <td scope="row"> <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/ratingform">finalize</a>  </td>
                           </tr>
                         </tbody>
                       </table>
@@ -355,178 +356,178 @@
   </div>
 
   <!-- Ratings and Reviews-->
-
   <div class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="row">
-            <h3>Ratings and Reviews</h3>
-            <a class="btn btn-simple btn-primary btn-round ml-lg-auto" routerLink="/userprofile/RatingsComponent">View
-              More</a>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="well well-sm">
-              <div class="row">
-                <div class="col-xs-12 col-md-6 text-center">
-                  <h1 class="rating-num">
-                    4.0</h1>
-                  <div class="stars">
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                  </div>
-                  <div>
-                    <span class="glyphicon glyphicon-user"></span>1,050,008 total
-                  </div>
-                </div>
-
-                <div class="col-xs-12 col-md-6">
-                  <div class="row rating-desc">
-                    <div class="col-xs-3 col-md-3 text-right">
-                      <span class="glyphicon glyphicon-star"></span>5
-                    </div>
-                    <div class="col-xs-8 col-md-9">
-                      <div class="progress progress-striped">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                          <span class="sr-only">80%</span>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- end 5 -->
-                    <div class="col-xs-3 col-md-3 text-right">
-                      <span class="glyphicon glyphicon-star"></span>4
-                    </div>
-                    <div class="col-xs-8 col-md-9">
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                          <span class="sr-only">60%</span>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- end 4 -->
-                    <div class="col-xs-3 col-md-3 text-right">
-                      <span class="glyphicon glyphicon-star"></span>3
-                    </div>
-                    <div class="col-xs-8 col-md-9">
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                          <span class="sr-only">40%</span>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- end 3 -->
-                    <div class="col-xs-3 col-md-3 text-right">
-                      <span class="glyphicon glyphicon-star"></span>2
-                    </div>
-                    <div class="col-xs-8 col-md-9">
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                          <span class="sr-only">20%</span>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- end 2 -->
-                    <div class="col-xs-3 col-md-3 text-right">
-                      <span class="glyphicon glyphicon-star"></span>1
-                    </div>
-                    <div class="col-xs-8 col-md-9">
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 15%">
-                          <span class="sr-only">15%</span>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- end 1 -->
-                  </div>
-                  <!-- end row -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <form novalidate [formGroup]="replyForm" (ngSubmit)="submitreplyForm()">
-              <div *ngFor="let review of this.reviewlist | slice:1;let index= index  " >
-                  <div class="card card-inner">
-                      <div class="card-body">
-                      <div class="card-body col-xs-10 col-md-10">  
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
             <div class="row">
-              <div class="col-md-2">
-                <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
-                 <p class="text-secondary text-center">
-                    {{datelist[index+1]}}  
-                
-              </div>
-
-              <div class="col-md-10">
-                <div class="clearfix"></div>
-                
-                
-                {{index+1}} {{review}}<br>
-                   
-              <a class="float-right btn btn-outline-primary ml-2"name="NIC" NIC="index+1"(click)="onLinkClicked(index+1)" > <i class="fa fa-reply"></i> Reply</a>
-                
-              <textarea *ngIf="buttonClicked == index+1" formControlName ="reply" rows="4" id="index+1" cols="50"[(ngModel)] = "str" ></textarea>
-               <div class="row">
-                  <div class="footer text-center">
-                      <a *ngIf="buttonClicked == index+1" class="btn btn-primary btn-round btn-lg btn-block" (click)="sendreply()">Submit </a>
+              <h3>Ratings and Reviews</h3>
+              <a _ngcontent-c2="" class="btn btn-simple btn-primary btn-round ml-lg-auto"
+                routerLink="/userprofile/RatingsComponent">View
+                More</a>
+            </div>
+            <div class="col-xs-12 col-md-6">
+              <div class="well well-sm">
+                <div class="row">
+                  <div class="col-xs-12 col-md-6 text-center">
+                    <h1 class="rating-num">
+                      {{this.highestRate | number:'1.0-0'}}</h1>
+                      <div class="stars">
+                        <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 1" onclick="add(this,1)"></span>
+                        <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 2" onclick="add(this,1)"></span>
+                        <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 3" onclick="add(this,1)"></span>
+                        <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 4" onclick="add(this,1)"></span>
+                        <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 5" onclick="add(this,1)"></span>
+                        </div>
+                     
+                    <div>
+                      <span class="glyphicon glyphicon-user"></span>{{this.totalRates}} total
                     </div>
-                   
-              </div> 
-              </div>
-              
-
-              </div>
-              </div>
-            </div>
-          </div>
-           
-           <div *ngFor="let time of this.timelist | slice:1;let i = index  " >
-            <div *ngIf="index+1 == numlist[i+1]">
-              <div class="row">
-                <div class="col-md-5"></div>
-                <div class="col-md-7" style="margin-left: 100 px"  >
-              <div class="card card-inner">
-                <div class="card-body">
-                <div class="card-body col-xs-10 col-md-10">  
-      <div class="row">
-        <div class="col-md-4">
-          <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
-           <p class="text-secondary text-center">
-              {{time}} 
-          
-        </div>
-
-        <div class="col-md-6">
-          <div class="clearfix"></div>
-          
-          
-           {{replylist[i+1]}}<br>
-            </div>
-            </div>
-            </div>
+                  </div>
+  
+                  <div class="col-xs-12 col-md-6">
+                    <div class="row rating-desc">
+                      <div class="col-xs-3 col-md-3 text-right">
+                        <span class="glyphicon glyphicon-star"></span>5
+                      </div>
+                      <div class="col-xs-8 col-md-9">
+                        <div class="progress progress-striped">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100"  [ngStyle]="{'width.%':this.starFivePer }">
+                            <span class="sr-only">{{this.starFivePer}}%</span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end 5 -->
+                      <div class="col-xs-3 col-md-3 text-right">
+                        <span class="glyphicon glyphicon-star"></span>4
+                      </div>
+                      <div class="col-xs-8 col-md-9">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starFourPer }">
+                            <span class="sr-only">{{this.starFourPer}}%</span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end 4 -->
+                      <div class="col-xs-3 col-md-3 text-right">
+                        <span class="glyphicon glyphicon-star"></span>3
+                      </div>
+                      <div class="col-xs-8 col-md-9">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starThreePer }">
+                            <span class="sr-only">{{this.starThreePer}}%</span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end 3 -->
+                      <div class="col-xs-3 col-md-3 text-right">
+                        <span class="glyphicon glyphicon-star"></span>2
+                      </div>
+                      <div class="col-xs-8 col-md-9">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starTwoPer }">
+                            <span class="sr-only">{{this.starTwoPer}}%</span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end 2 -->
+                      <div class="col-xs-3 col-md-3 text-right">
+                        <span class="glyphicon glyphicon-star"></span>1
+                      </div>
+                      <div class="col-xs-8 col-md-9">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starOnePer }">
+                            <span class="sr-only">{{this.starOnePer}}%</span>
+                          </div>
+                        </div>
+                      </div>
+                      
+                      <!-- end 1 -->
+                    </div>
+                    <!-- end row -->
+                  </div>
                 </div>
               </div>
-          </div>
-        </div>
-          </div> 
-          </div>       
+            </div>
+            <form novalidate [formGroup]="replyForm" (ngSubmit)="submitreplyForm()">
+                <div *ngFor="let review of this.reviewlist | slice:1;let index= index  " >
+                    <div class="card card-inner">
+                        <div class="card-body">
+                        <div class="card-body col-xs-10 col-md-10">  
+              <div class="row">
+                <div class="col-md-2">
+                  <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
+                   <p class="text-secondary text-center">
+                      {{datelist[index+1]}}  
+                  
+                </div>
+  
+                <div class="col-md-10">
+                  <div class="clearfix"></div>
+                  
+                  
+                  {{index+1}} {{review}}<br>
+                     
+                <a class="float-right btn btn-outline-primary ml-2"name="NIC" NIC="index+1"(click)="onLinkClicked(index+1)" > <i class="fa fa-reply"></i> Reply</a>
+                  
+                <textarea *ngIf="buttonClicked == index+1" formControlName ="reply" rows="4" id="index+1" cols="50"[(ngModel)] = "str" ></textarea>
+                 <div class="row">
+                    <div class="footer text-center">
+                        <a *ngIf="buttonClicked == index+1" class="btn btn-primary btn-round btn-lg btn-block" (click)="sendreply()">Submit </a>
+                      </div>
+                     
+                </div> 
+                </div>
                 
-               
-          
-
+  
+                </div>
+                </div>
+              </div>
+            </div>
+             
+             <div *ngFor="let time of this.timelist | slice:1;let i = index  " >
+              <div *ngIf="index+1 == numlist[i+1]">
+                  <div class="col-md-7"    >
+                <div class="card card-inner">
+                  <div class="card-body">
+                  <div class="card-body col-xs-10 col-md-10">  
+        <div class="row">
+          <div class="col-md-4">
+            <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
+             <p class="text-secondary text-center">
+                {{time}} 
+            
           </div>
-        </form>
+  
+          <div class="col-md-6">
+            <div class="clearfix"></div>
+            
+            
+             {{replylist[i+1]}}<br>
+              </div>
+              </div>
+              </div>
+                  </div>
+                </div>
+            </div>
+            </div> 
+            </div>       
+                  
+                 
+            
+  
+            </div>
+          </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+   
   <!-- /Ratings and Reviews-->
 
 
