--- a/frontend/src/app/components/components.component.html
+++ b/frontend/src/app/components/components.component.html
@@ -4,7 +4,7 @@
             style="background-image: url('assets/img/header.jpg');">
         </div>
 
-        <!--Logo and Name-->
+        <!--model component-->
         <div class="container">
             <div class="content-center brand">
                 <img class="n-logo" src="assets/img/now-logo.png" alt="">
@@ -13,12 +13,10 @@
                 <ngbd-modal-component></ngbd-modal-component>
             </div>
         </div>
-        <!--/Logo and Name-->
+        <!--/model component-->
     </div>
+
     <app-non-registered></app-non-registered>
-
-
-
 
     <div class="main">
         <div class="section section-tabs">
