--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -12,90 +12,9 @@
     <br>
     <!-- /Head -->
 
-    <div class="container">
-        <div class="col-md-12 content-center">
-            <div class="card card-login card-plain">
-                <form class="form" method="" action="" [formGroup]="loginForm">
-                    <div class="form-group">
-
-                        <!-- Email -->
-                        <div class="mt-5">
-                            <div class="form-group"><label>Email</label>
-                                <input [(ngModel)]="log_email" formControlName="log_email"
-                                    class="form-control border-input" placeholder="email" type="email"
-                                    [ngClass]="{'is-invalid':loginForm.get('log_email').touched && loginForm.get('log_email').invalid}">
-                                <div class="invalid-feedback">
-                                    <div>Email is required</div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /Email -->
-
-                        <!-- Password -->
-                        <div class="mt-5">
-                            <div class="form-group"><label>Password</label>
-                                <input [(ngModel)]="log_password" formControlName="log_password"
-                                    class="form-control border-input" placeholder="Password" type="password"
-                                    [ngClass]="{'is-invalid':loginForm.get('log_password').touched && loginForm.get('log_password').invalid}">
-                                <div class="invalid-feedback">
-                                    <div>Password is required</div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /Password -->
-
-                        <div class="mt-5">
-                            <!-- Buttons -->
-
-                            <div *ngIf="error">
-                                <ngb-alert class="alert alert-danger" role="alert">
-                                    <!---->
-                                    <div class="container">
-                                        <div class="alert-wrapper">
-                                            <div class="message">
-                                                <div class="alert-icon"><i class="now-ui-icons ui-1_simple-remove"></i>
-                                                </div>Invalid username or password
-                                            </div>
-                                        </div>
-                                    </div>
-                                </ngb-alert>
-                            </div>
-
-
-                            <div class="text-center">
-                                <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal"
-                                    (click)="login()">LogIn</a>
-                            </div>
-                        </div>
-                        <div class="justify-content-center">
-                            <div class="mt-5 ">
-                                <h6>
-                                    <a class="btn btn-link btn-primary"
-                                        (click)="[open(signuppop,'' , ''),d('Cross click')]">Create
-                                        Account</a>
-                                </h6>
-                                <h6>
-                                    <a class="btn btn-link btn-primary" (click)="[d('Cross click')]"
-                                        routerLink="/recoverAccount">Forgot
-                                        Password?</a>
-                                </h6>
-                                <!-- /Button -->
-                            </div>
-
-                        </div>
-
-
-                    </div>
-
-                </form>
-            </div>
-        </div>
-    </div>
-
+    <app-login></app-login>
 </ng-template>
-
 <!--/Login-->
-
 
 
 <!--SignUp-->
@@ -112,112 +31,6 @@
     </div>
     <br>
     <!-- /Head -->
-
-    <div class="container">
-        <div class="col-md-12">
-            <div class="card card-signup card-plain">
-                <form class="form" method="" action="" [formGroup]="signupForm">
-                    <div class="content">
-
-                        <!-- /Email -->
-                        <div class="mt-5">
-                            <div class="form-group"><label>Email</label>
-                                <input [(ngModel)]="email" formControlName="email" class="form-control border-input"
-                                    placeholder="email" type="email"
-                                    [ngClass]="{'is-invalid':signupForm.get('email').touched && signupForm.get('email').invalid}">
-                                <div class="invalid-feedback">
-                                    <div>Email is required</div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <!-- /Email -->
-
-                        <!-- Username -->
-                        <div class="mt-5">
-                            <div class="form-group"><label>Username</label>
-                                <input [(ngModel)]="username" formControlName="username"
-                                    class="form-control border-input" placeholder="Username" type="text"
-                                    [ngClass]="{'is-invalid':signupForm.get('username').touched && signupForm.get('username').invalid}">
-                                <div class="invalid-feedback">
-                                    <div>Username is required</div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /Username -->
-
-                        <!-- Password -->
-                        <div class="mt-5">
-                            <div class="form-group"><label>Password</label>
-                                <input [(ngModel)]="password" formControlName="password"
-                                    class="form-control border-input" placeholder="Password" type="password"
-                                    [ngClass]="{'is-invalid':signupForm.get('password').touched && signupForm.get('password').invalid}">
-                                <div class="invalid-feedback" *ngIf="signupForm.get('password').errors?.required">
-                                    <div>Password is required</div>
-                                </div>
-                                <div class="invalid-feedback" *ngIf="signupForm.get('password').errors?.minlength">
-                                    <div>Password should contain atleast 5 characters</div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <!-- /Password -->
-
-                        <!-- Confirm Password -->
-                        <div class="mt-5">
-                            <div class="form-group"><label>Confirm Password</label>
-                                <input [(ngModel)]="confirmpassword" formControlName="confirmpassword"
-                                    class="form-control border-input" placeholder="Confirmpassword" type="password"
-                                    [ngClass]="{'is-invalid':signupForm.get('confirmpassword').touched && signupForm.get('confirmpassword').invalid}">
-                                <div class="invalid-feedback">
-                                    <div>Please confirm password</div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /Confirm Password -->
-
-                        <div *ngIf="signupError">
-                            <ngb-alert class="alert alert-danger" role="alert">
-                                <!---->
-                                <div class="container">
-                                    <div class="alert-wrapper">
-                                        <div class="message">
-                                            <div class="alert-icon"><i class="now-ui-icons ui-1_simple-remove"></i>
-                                            </div>Email or Username already exists
-                                        </div>
-                                    </div>
-                                </div>
-                            </ngb-alert>
-                        </div>
-
-                        <div *ngIf="conPass">
-                            <ngb-alert class="alert alert-danger" role="alert">
-                                <!---->
-                                <div class="container">
-                                    <div class="alert-wrapper">
-                                        <div class="message">
-                                            <div class="alert-icon"><i class="now-ui-icons ui-1_simple-remove"></i>
-                                            </div>Confirm password
-                                        </div>
-                                    </div>
-                                </div>
-                            </ngb-alert>
-                        </div>
-
-                        <div class="mt-5">
-                            <!-- Buttons -->
-                            <div class="text-center">
-                                <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal"
-                                    (click)="signup()">Signup</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </form>
-            </div>
-        </div>
-    </div>
-
+    <app-signup></app-signup>
 </ng-template>
-
 <!--/SignUp-->
