moved complain button into sellers page

--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -27,6 +27,9 @@
           <div class="social-description">
             <a href="#button" class="btn btn-primary btn-lg btn-round">Sales History</a>
           </div>
+          <div class="social-description">
+              <a href="#button" class="btn btn-primary btn-lg btn-round" routerLink="/pages/newcomplain">Complain</a>
+            </div>
         </div>
       </div>
     </div>
