--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -54,7 +54,7 @@
 
         <div class=" col-md-12 col-sm-12">
           <div class="mt-4">
-            <h3>Recent Broadcasts Received</h3>
+            <h3>My Broadcasts</h3>
           </div>
 
           <div class="mt-5">
@@ -68,7 +68,7 @@
                         <div class="col-md-12">
                           <div class="row">
                             <div class="ml-auto">
-                              <a class="btn btn-sm btn-primary btn-sm " routerLink="/userprofile/broadcast">View
+                              <a class="btn btn-sm btn-primary btn-sm " routerLink="broadcast/viewmore">View
                                 More</a>
                             </div>
                           </div>
