admin profile component and complain form

--- a/frontend/src/app/pages/sellerview/sellerview.component.html
+++ b/frontend/src/app/pages/sellerview/sellerview.component.html
@@ -27,7 +27,12 @@
             to
             Bookmarks
           </button>
-        </div>
+          <button class="btn btn-primary btn-sm btn-round" type="button" 
+          [routerLink]="['/userprofile/makecomplain', 'user?.username']"  outerLinkActive="router-link-active"  routerLinkActive="router-link-active" ><i class="now-ui-icons ui-1_send"></i> Complain
+          about this 
+          Seller
+        </button>
+        </div> 
       </div>
     </div>
   </div>
