--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -308,7 +308,7 @@
                               <div class="row">
                                 <h3>Selling</h3>
                                 <div class="ml-auto">
-                                  <a class="btn btn-sm btn-primary btn-lg " routerLink="/userprofile/broadcast">View
+                                  <a class="btn btn-sm btn-primary btn-lg " routerLink="/userprofile/moreselling">View
                                     More</a> </div>
                               </div>
                             </div>
