--- a/frontend/src/app/components/SellerProfile/more-selling/more-selling.component.html
+++ b/frontend/src/app/components/SellerProfile/more-selling/more-selling.component.html
@@ -21,31 +21,33 @@
               <div class="row">
               </div>
               <form>
-                <table class="table table-striped">
+                <table class="table table-striped table-hover">
                   <thead>
-                    <tr>
-                      <th scope="col">ID</th>
-                      <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                      <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                      <th scope="col">View Finalizing Forms</th>
-                      <th scope="col">Remove</th>
 
+                    <tr>
+                      <th scope="col">Number</th>
+                      <th scope="col" sortable="name" (sort)="onSort($event)">Product</th>
+                      <th scope="col" sortable="area" (sort)="onSort($event)">Message</th>
+                      <th scope="col">Finalize</th>
+                      <th scope="col">Remove</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let x of broadcastArray?.broadcast">
+                    <tr *ngFor="let x of sellingArray?.selling">
                       <td>{{x._id | slice:-4}}</td>
-                      <td>{{x.product}}</td>
+                      <a routerLink="/userprofile/sellingitem/{{x._id}}">
+                        <td>{{x.product}}</td>
+                      </a>
                       <td scope="row">{{x.tags}}</td>
                       <td scope="row">
                         <div class="social-description">
-                          <a href="#button" class="btn btn-primary btn-lg btn-sm"
-                            routerLink="/userprofile/finalizingformview/{{x._id}}">F</a>
+                          <a href="#button" class="btn btn-primary btn-sm  btn-sm"><i
+                              class="now-ui-icons ui-1_simple-remove"></i></a>
                         </div>
                       </td>
-                      <td scope="row">
+                      <td>
                         <div class="social-description">
-                          <a class="btn btn-primary btn-lg btn-sm" (click)="removeBroadcast(x._id)"><i
+                          <a class="btn btn-primary btn-lg  btn-sm" (click)="removeSelling(x._id)"><i
                               class="now-ui-icons ui-1_simple-remove"></i></a>
                         </div>
                       </td>
