message and sellermessage updated

--- a/frontend/src/app/pages/sellerview/sellerview.component.html
+++ b/frontend/src/app/pages/sellerview/sellerview.component.html
@@ -27,6 +27,9 @@
             to
             Bookmarks
           </button>
+          <div class="social-description">
+            <a class="btn btn-primary btn-lg btn-round" routerLink="/sellerview/messages">Message</a>
+          </div>&nbsp;
         </div>
       </div>
     </div>
