--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.scss
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.scss
@@ -15,6 +15,12 @@ h3 {
       outline: none;
     }
   }
+  .avatar {
+    vertical-align: middle;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+  }
   .input-area {
     width: 100%;
     form {
