--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -142,7 +142,7 @@
                                         <div class="card-body col-xs-8 col-md-8">  
                               <div class="row">
                                 <div class="col-md-3">
-                                  <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
+                                  <img src="https://images.unsplash.com/photo-1439402702863-6434b61e6392?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Avatar" class="avatar" >
                                    <p class="text-secondary text-center">
                                       {{datelist[index+1]|dateAgo}}  
                                   
@@ -181,7 +181,7 @@
                                   <div class="card-body col-xs-10 col-md-10">  
                         <div class="row">
                           <div class="col-md-4">
-                            <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
+                            <img src="https://images.unsplash.com/photo-1492581654245-5a258fbbecce?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Avatar" class="avatar">
                              <p class="text-secondary text-center">
                                 {{time| dateAgo}} 
                             
