--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -152,7 +152,7 @@
                                   <div class="clearfix"></div>
                                 
                                   
-                                  {{index+1}} {{review}}<br>
+                                  {{index+1}})   {{review}}<br>
                                      
                                 <a class="float-right btn btn-outline-primary ml-2"name="NIC" NIC="index+1"(click)="onLinkClicked(index+1)" > <i class="fa fa-reply"></i> Reply</a>
                                   
