--- a/frontend/src/app/components/FinalizingComponent/finalizingformview/finalizingformview.component.html
+++ b/frontend/src/app/components/FinalizingComponent/finalizingformview/finalizingformview.component.html
@@ -52,8 +52,10 @@
                           <tr *ngFor="let x of finalizingForms?.item">
                             <ng-template [ngIf]="x.product == itemDetails?.item[0].product">
                               <td>{{x.sellerId}}</td>
-                              <a routerLink="/userprofile/search/{{x.username}}">
-                                <td>{{x.sellerId}}</td>
+                              <a routerLink="/userprofile/search/{{x.sellerName}}">
+                                <td>
+                                  {{x.sellerName}}
+                                </td>
                               </a>
                               <td>
                                 <div class="social-description">
